# salescampaign

.github/workflows/: main_lc-campaigns.yml
be/: Dockerfile  README.md  docker-compose.yml
be/app/: .dev.env  .docker.env  .env  README.md  alembic.ini  prestart.sh  pyproject.toml  run.sh
be/app/alembic/: env.py
be/app/alembic/versions/: 148ca287f009_create_role_table.py  4f8cc733163b_create_user_table.py  ad3fb8d4ac9c_create_campaigns_table.py
be/app/app/: backend_pre_start.py  database.py  main.py
be/app/app/api/api_v1/: api.py
be/app/app/api/api_v1/endpoints/: auth.py  campaigns.py  roles.py  subscriptions.py  users.py
be/app/app/core/: config.py
be/app/app/db/: init_db.py  session.py
be/app/app/db/data-seed/: users.json
be/app/app/handlers/: error_handler.py
be/app/app/models/: campaigns.py  roles.py  users.py
be/app/app/responses/: endusers_response.py  subscriptions_response.py
be/app/app/schemas/: campaigns.py  roles.py  subscriptions.py  users.py
be/app/app/services/: CRM_PLATFORM_Client.py  auth_service.py  base.py  campaigns_service.py  roles_service.py  subscriptions_service.py  token_service.py  users_service.py
be/app/app/utils/: helper.py  validation.py
fe/: .eslintrc.json  package-lock.json  package.json
fe/public/: index.html  manifest.json
fe/src/: App.js  index.css  index.js  routes.js
fe/src/components/: ProtectedPage.jsx
fe/src/config/: api.js  axios.js
fe/src/constants/: api.js  common.js
fe/src/provider/: AuthProvider.jsx  NotificationProvider.jsx  RouteProvider.jsx
fe/src/utils/: formatDay.js  (+1 more)
(+131 files in other folders)
